<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical"
    tools:context="net.sourceforge.simcpux.QueryResultActivity">

    <include layout="@layout/activity_base_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="@drawable/corners_white"
            android:paddingTop="20dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/img_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/logo_result"
                app:riv_border_color="@color/colorPrimary"
                app:riv_border_width="1dp"
                app:riv_oval="true" />

            <TextView
                android:id="@+id/tx_query_cardType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/tx_cardType"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tx_query_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tx_query_cardType"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:text="@string/tx_cardBalance"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/corners_bottom_blue">

                <TextView
                    android:id="@+id/tx_query_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:padding="5dp"
                    android:textColor="@color/gray_bg"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tx_query_validate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:padding="5dp"
                    android:textColor="@color/gray_bg"
                    android:textSize="14sp" />
            </RelativeLayout>
        </RelativeLayout>

        <net.sourceforge.simcpux.widget.DrawableCenterButton
            android:id="@+id/btn_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorWhite"
            android:drawableLeft="@mipmap/see_his"
            android:drawablePadding="5dp"
            android:gravity="left|center_vertical"
            android:text="@string/query_history"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />
    </RelativeLayout>

</LinearLayout>
