<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical" >

    <include layout="@layout/activity_base_toolbar"/>
    <LinearLayout
        android:id="@+id/progress_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tx_step1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/tx_step2"
                    android:textColor="@color/gray_progress"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/tx_step3"
                    android:textColor="@color/gray_progress"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:background="@mipmap/on_1" />

            <TextView
                android:layout_width="105dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/colorPrimary" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:background="@mipmap/off_2" />

            <TextView
                android:layout_width="105dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/gray_progress" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:background="@mipmap/off_3" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/corners_empty_blue"
                android:orientation="vertical"
                android:paddingTop="8dp" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <net.sourceforge.simcpux.widget.CircleImageView
                        android:id="@+id/pic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/logo_result"
                        app:border_color="@color/colorPrimary"
                        app:border_width="1dp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tx_cardtype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_get_balance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center_horizontal"
                    android:text="￥203.38"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corners_bottom_blue" >

                    <TextView
                        android:id="@+id/tv_card_num"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="10dp"
                        android:paddingBottom="6dp"
                        android:paddingTop="6dp"
                        android:text="@string/app_name"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_available_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="10dp"
                        android:paddingBottom="6dp"
                        android:paddingTop="6dp"
                        android:text="2025/9/9"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_select_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:text="充值金额"
                    android:textColor="@color/gray_tv" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="3" >

                        <Button
                            android:id="@+id/btn_money_1"
                            android:layout_width="0dp"
                            android:layout_height="35dp"
                            android:layout_weight="1"
                            android:background="@drawable/selector_money"
                            android:text="1元"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp" />

                        <Button
                            android:id="@+id/btn_money_2"
                            android:layout_width="0dp"
                            android:layout_height="35dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/selector_grey_no"
                            android:text="2元"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp" />

                        <Button
                            android:id="@+id/btn_money_3"
                            android:layout_width="0dp"
                            android:layout_height="35dp"
                            android:layout_weight="1"
                            android:background="@drawable/selector_grey_no"
                            android:text="5元"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="3" >

                        <Button
                            android:id="@+id/btn_money_4"
                            android:layout_width="0dp"
                            android:layout_height="35dp"
                            android:layout_weight="1"
                            android:background="@drawable/selector_grey_no"
                            android:text="10元"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp" />

                        <Button
                            android:id="@+id/btn_money_5"
                            android:layout_width="0dp"
                            android:layout_height="35dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/selector_grey_no"
                            android:text="50元"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp" />

                        <Button
                            android:id="@+id/btn_money_6"
                            android:layout_width="0dp"
                            android:layout_height="35dp"
                            android:layout_weight="1"
                            android:background="@drawable/selector_grey_no"
                            android:text="100元"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:text="支付方式"
                android:textColor="@color/gray_tv" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"
                android:weightSum="3" >

                <net.sourceforge.simcpux.widget.DrawableCenterButton
                    android:id="@+id/weixin_rl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@mipmap/bankoff"
                    android:drawableStart="@mipmap/wx2"
                    android:drawablePadding="5dp"
                    android:gravity="left|center_vertical"
                    android:text="微信"
                    android:textSize="14sp"  />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <Button
                    android:id="@+id/bt_confirmBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/corners_bg"
                    android:padding="10dp"
                    android:text="立即充值"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>